Update firebase recycler view

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
             url "https://maven.google.com"
         }
         jcenter()
+        maven {
+            url 'http://dl.bintray.com/amulyakhare/maven'
+        }
     }
 }
 
