--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     // Firebase
     compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.firebaseui:firebase-ui-database:2.1.0'
+
+    // Text Drawable
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
